# mcp-sop-server

./: .gitignore  README.md  main.py  main_local.py  mcp-client-config.json  pyproject.toml  requirements.txt  test_server.py
src/mcp_sop_server/: __init__.py  document_processor.py  document_searcher.py  mcp_server.py
